Creating routes with shop and add-product pages.

--- a/views/shop.html
+++ b/views/shop.html
@@ -16,7 +16,7 @@
   </header>
 
   <main>
-    <h1>My Products</h1>>
+    <h1>My Products</h1>
     <p>List of all the products..</p>
   </main>
 </body>
