--- a/views/shop.html
+++ b/views/shop.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/main.css">
   <title>Add Product</title>
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="/">Shop</a></li>
-        <li><a href="/add-product">Add Product</a></li>
+  <header class="main-header">
+    <nav class="main-header__nav">
+      <ul class="main-header__item-list">
+        <li class="main-header__item" ><a class="active" href="/">Shop</a></li>
+        <li class="main-header__item"><a href="admin/add-product">Add Product</a></li>
       </ul>
     </nav>
   </header>
