--- a/views/add-product.html
+++ b/views/add-product.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/product.css">
+  <link rel="stylesheet" href="/css/form.css">
   <title>Add Product</title>
 </head>
 <body>
@@ -18,12 +19,12 @@
     </header>
 
   <main>
-    <form class="product-form" action="admin/add-product" method="POST">
+    <form class="product-form" action="/admin/add-product" method="POST">
       <div class="form-control">
         <label  for="title">Title</label>
         <input type="text" name="title">
       </div>
-      <button type="submit">Add Product</button>
+      <button class="btn" type="submit">Add Product</button>
     </form>
   </main>
 </body>
