--- a/views/add-product.pug
+++ b/views/add-product.pug
@@ -1,23 +1,13 @@
-<!DOCTYPE html>
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Add Product
-    link(rel="stylesheet", href="/css/main.css")
+extends layouts/main-layout.pug
+
+block styles
     link(rel="stylesheet", href="/css/product.css")
     link(rel="stylesheet", href="/css/form.css")
-  body
-    header.main-header
-      nav.main-header__nav
-        ul.main-header__item-list
-          li.main-header__item
-            a(href="/") Shop
-          li.main-header__item
-            a.active(href="/add-product") Add Product
-    main
-      form.product-form(action="/admin/add-product" method="POST")
-        .form-control
-          label(for="title") Title
-          input(type="text" name="title")
-          button.btn Add Product
+
+block content
+  main
+    form.product-form(action="/admin/add-product" method="POST")
+      .form-control
+        label(for="title") Title
+        input(type="text" name="title")#title
+      button.btn(type="submit") Add Product
