--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,23 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/main.css">
-  <title><%= pageTitle %>></title>
-
+<%- include('includes/head.ejs') %>
 </head>
-<body>
-  <header class="main-header">
-    <nav class="main-header__nav">
-      <ul class="main-header__item-list">
-        <li class="main-header__item" ><a href="/">Shop</a></li>
-        <li class="main-header__item"><a href="admin/add-product">Add Product</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <h1>Page not found!</h1>
-  </main>
-</body>
-</html>
+  <body>
+    <%- include('includes/navigation.ejs') %>
+    <main>
+      <h1>Page not found!</h1>
+    </main>
+<%- include('includes/end.ejs') %>
